--- a/tracks.yaml
+++ b/tracks.yaml
@@ -50,4 +50,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-sports/ros_image_to_qimage.git
-    version: :{auto}
+    version: 0.0.2
+    version_saved: :{auto}
