--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_image_to_qimage
-	previous = 
-	base = 569a156
+	previous = 569a156
+	base = 98faeb0
 	trim = 
 	trimbase = 
