--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_image_to_qimage
-	previous = 
-	base = a7a9a21
+	previous = a7a9a21
+	base = d8ee21e
 	trim = 
 	trimbase = 
