--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ros_image_to_qimage
-	previous = 
-	base = 374cbdc
+	previous = 374cbdc
+	base = c73abbf
 	trim = 
 	trimbase = 
