--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros_image_to_qimage
-	previous = 
-	base = 645c097
+	previous = 645c097
+	base = 1645f79
 	trim = 
 	trimbase = 
