--- a/.github/workflows/build_and_test_galactic.yaml
+++ b/.github/workflows/build_and_test_galactic.yaml
@@ -2,15 +2,15 @@
 
 name: Build and Test (galactic)
 
-# Controls when the action will run.
+# Controls when the action will run. 
 on:
   # Triggers the workflow on push
   push:
-    branches: [ galactic ]
+    branches: [ rolling ]
 
   # Triggers the workflow on pull requests
   pull_request:
-    branches: [ galactic ]
+    branches: [ rolling ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -21,14 +21,11 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container:
-      image: ubuntu:focal
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - uses: ros-tooling/setup-ros@v0.3
-        with:
-          use-ros2-testing: true
+      - uses: actions/checkout@v2
+      - uses: ros-tooling/setup-ros@v0.2
       - uses: ros-tooling/action-ros-ci@v0.2
         with:
           target-ros2-distro: galactic
