--- a/tracks.yaml
+++ b/tracks.yaml
@@ -40,7 +40,7 @@ tracks:
       :{release_inc} --os-name fedora
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc} --os-name rhel
-    devel_branch: null
+    devel_branch: humble
     last_version: 0.0.2
     name: upstream
     patches: null
