--- a/package.xml
+++ b/package.xml
@@ -2,19 +2,24 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>ros_image_to_qimage</name>
-  <version>0.2.1</version>
+  <version>0.4.0</version>
   <description>A package that converts a ros image msg to a qimage object</description>
   <maintainer email="kenjibrameld@gmail.com">ijnek</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <buildtool_depend>ament_cmake_pytest</buildtool_depend>
 
   <depend>sensor_msgs</depend>
   <depend>qtbase5-dev</depend>
   <depend>cv_bridge</depend>
 
+  <exec_depend>python_qt_binding</exec_depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
