--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.0-1": ["Wed Jun 15 2022", "ijnek", "kenjibrameld@gmail.com"], "0.0.2-2": ["Tue Feb 08 2022", "ijnek", "kenjibrameld@gmail.com"]}
+{"0.4.0-1": ["Mon Sep 26 2022", "ijnek", "kenjibrameld@gmail.com"], "0.3.0-1": ["Wed Jun 15 2022", "ijnek", "kenjibrameld@gmail.com"], "0.0.2-2": ["Tue Feb 08 2022", "ijnek", "kenjibrameld@gmail.com"]}
