--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ros_image_to_qimage
-	previous = 
-	base = c19566c
+	previous = c19566c
+	base = 5067465
 	trim = 
 	trimbase = 
