--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_image_to_qimage
-	previous = 
-	base = 05de88b
+	previous = 05de88b
+	base = 64a714f
 	trim = 
 	trimbase = 
