--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_image_to_qimage
-	previous = 
-	base = 9d711fb
+	previous = 9d711fb
+	base = 085d0b6
 	trim = 
 	trimbase = 
