--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros_image_to_qimage
-	previous = 
-	base = 3c72918
+	previous = 3c72918
+	base = 8e9744e
 	trim = 
 	trimbase = 
