--- a/tracks.yaml
+++ b/tracks.yaml
@@ -76,5 +76,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-sports/ros_image_to_qimage.git
-    version: 0.4.1
-    version_saved: :{auto}
+    version: :{auto}
