--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,4 +102,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros-sports/ros_image_to_qimage.git
-    version: :{auto}
+    version: 0.4.1
+    version_saved: :{auto}
