--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_image_to_qimage
-	previous = 
-	base = 252cdd8
+	previous = 252cdd8
+	base = 014bbe7
 	trim = 
 	trimbase = 
