--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_image_to_qimage
-	previous = 
-	base = 7c3117a
+	previous = 7c3117a
+	base = ba8b6f3
 	trim = 
 	trimbase = 
