--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ros_image_to_qimage
-	previous = 
-	base = 5f468c9
+	previous = 5f468c9
+	base = b67440d
 	trim = 
 	trimbase = 
