--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros_image_to_qimage
-	previous = 
-	base = 72c4049
+	previous = 72c4049
+	base = e2afd21
 	trim = 
 	trimbase = 
