--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,8 +102,7 @@ tracks:
     ros_distro: jazzy
     vcs_type: git
     vcs_uri: https://github.com/ros-sports/ros_image_to_qimage.git
-    version: 0.4.1
-    version_saved: :{auto}
+    version: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
