--- a/tracks.yaml
+++ b/tracks.yaml
@@ -128,7 +128,8 @@ tracks:
     ros_distro: kilted
     vcs_type: git
     vcs_uri: https://github.com/ros-sports/ros_image_to_qimage.git
-    version: :{auto}
+    version: 0.4.1
+    version_saved: :{auto}
   rolling:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
